# gitstat

./: Cargo.toml  README.md  zshrc.sh
src/: main.rs
